8143930: C1 LinearScan asserts when compiling two back-to-back CompareAndSwapLongs

Refactor CAS code to decrease register pressure in c1

Reviewed-by: kvn, shade